<resources>
    <string name="app_name">AH Team</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_authorization_fragment">Hello authorization fragment</string>
    <string name="splash_hello">Добро пожаловать</string>
    <string name="title_list_project">Список проектов</string>
    <string name="add_project">Создание проекта</string>
    <string name="create_name_project">Название проекта</string>
    <string name="create_description_project">Описание проекта</string>
    <string name="btn_create_project">Создать проект</string>
    <string name="update_project">Изменить проект</string>
    <string name="btn_update_project">сохранить изменения</string>
    <string name="success_add_project">Проект добавлен</string>
    <string name="fail_add_project">Ошибка добавления проекта</string>

    <string name="success_delete_project">Проект удален</string>
    <string name="fail_delete_project">Ошибка удаления проекта</string>

    <string name="success_update_project">Проект изменен</string>
    <string name="fail_update_project">Ошибка изменения проекта</string>
    <string name="sections">Разделы</string>
    <string name="add_task">Добавление задачи</string>
    <string name="detail_fragment">Параметры проекта</string>
    <string name="autorization_title">Авторизация</string>
    <string name="parsing_section">Парсинг сайтов</string>
    <string name="update_task">Изменить задачу</string>

    <!--ProjectTasksAdapter-->
    <string name="name_task">Название задачи: %s</string>
    <string name="description_task">Описание задачи: %s</string>
    <string name="id_project_adapter">ID проекта: %s</string>
    <string name="id_task_adapter">ID задачи: %s</string>
    <string name="status_task_adapter">Статус: %s</string>
    <string name="date_task_adapter">Дата: %s</string>

    <!--CurrentParserProjectFragment-->
    <string name="title_current_parser_project">Парсинг</string>
    <string name="total_element_parsing">Всего элементов: %s</string>
    <string name="avg_price">Средняя цена: %s</string>
    <string name="avg_weight">Средний вес: %s</string>
    <string name="count_elements_exist">В наличии: %s</string>
    <string name="min_price_elements">Минимальная цена: %s</string>
    <string name="max_price_elements">Максимальная цена: %s</string>
    <string name="success_add_project_task">Парсер добавлен</string>
    <string name="fail_add_project_task">Ошибка создания парсера</string>

    <string name="success_update_project_task">Парсер изменен</string>
    <string name="fail_update_project_task">Ошибка изменения парсера</string>
    <string name="stat_count_element">Артикулов: %s</string>
    <string name="stat_count_offers">Торговых предложений: %s</string>
    <string name="stat_count_store">На остатках: %s</string>
    <string name="categories">Категории</string>
    <string name="btn_simple_catalog">Товары в категориях</string>
    <string name="btn_full_catalog">Товары с оферами</string>
    <string name="look_offers">Просмотр украшений</string>
    <string name="stat_on_offers">Статистика по товарам</string>
    <string name="stat_on_links">Статистика по ссылкам</string>
    <string name="btn_download_offers">3. Скачать параметры артикулов</string>
    <string name="btn_download_articles">2. Скачать артикулы из категорий</string>
    <string name="btn_download_category">1. Скачать категории (из меню)</string>
    <string name="manage_parser">Управление парсером</string>

    <string name="catalog_category_title">Каталог категорий</string>
    <string name="btn_stop_parser">Остановить парсер</string>

    <string name="elements_links_title">Каталог товаров</string>
    <string name="dfgsdf"><![CDATA[<strike>crossed</strike>]]></string>

</resources>