<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.parser.updateTaskProject.UpdateTaskProjectFragment">

    <include
        android:id="@+id/title_field"
        layout="@layout/title_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/title_field">

        <RelativeLayout
            android:id="@+id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutRootName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_name_project"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNameProject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutRootDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayoutRootName"
                android:layout_marginTop="5dp"
                android:hint="@string/create_description_project"
                app:counterEnabled="true"
                app:counterMaxLength="255">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:maxLength="255"
                    android:minLines="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/current_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayoutRootDescription"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                tools:text="Дата создания: 04.07.2022г. 10:00" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_update_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/main_deep_dark"
        android:text="@string/btn_update_project"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>