<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_deep_light_transparent_80"
    android:orientation="vertical"
    tools:context=".ui.screens.parser.currentParserProject.CurrentParserProjectFragment">

    <include
        android:id="@+id/title_field"
        layout="@layout/title_layout" />

    <RelativeLayout
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/field_state_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/text_title_field_btn_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Следующий этап парсинга:"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_download_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="1. Скачать категории (из меню)"
            android:clickable="false"
            android:enabled="false"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_download_articles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:enabled="false"
            android:text="2. Скачать артикулы из категорий"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_download_offers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:enabled="false"
            android:text="3. Скачать параметры артикулов"
            android:visibility="visible" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/root_catalog_statistic"
        android:layout_width="match_parent"
        style="@style/Card_view_holder"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/field_statistic_title"
                    style="@style/Title_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/cornflower_blue"
                    android:gravity="center_horizontal"
                    android:text="Статистика по ссылкам" />

                <ImageView
                    android:id="@+id/arrow_visible_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_up_24" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/progress_bar_catalog_stat"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="100dp">

                <ProgressBar
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/field_statistic_section_stat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="8dp"
                    android:visibility="visible"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/total_count_elements"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Item_holder"
                        android:text="@string/total_element_parsing"
                        tools:text="Всего элементов: 10177" />

                    <TextView
                        android:id="@+id/count_elements_exist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Item_holder"
                        android:text="@string/count_elements_exist"
                        tools:text="В наличии: 2819" />

                    <TextView
                        android:id="@+id/min_price_elements"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_price_elements"
                        style="@style/Item_holder"
                        tools:text="Минимальная цена: 190" />

                    <TextView
                        android:id="@+id/max_price_elements"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Item_holder"
                        android:text="@string/max_price_elements"
                        tools:text="Максимальная цена: 495890" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ImageButton
                        android:id="@+id/btn_reload_category_stat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/round_corner"
                        android:padding="5dp"
                        android:src="@drawable/ic_baseline_repeat_24" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>